# dalek-benchmarks

./: .gitmodules  Cargo.toml  Makefile
ed25519-dalek/: Makefile
ed25519-donna/: Cargo.toml  Makefile  build.rs
ed25519-donna/src/: bench.rs  ffi.rs  lib.rs
